Changelog for games

--- a/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
@@ -17,6 +17,7 @@
     <h3>{{ "admin.dashboard.whatsnew"|trans }}</h3>
     <h5>1.24</h5>
     <ul>
+      <li>A public list of <a href="{{ path("games") }}">games</a>,</li>
       <li>Skills can be edited in admin,</li>
     </ul>
     <h5>1.23</h5>
