--- a/src/Argon/GameBundle/Resources/views/Game/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Game/view.html.twig
@@ -34,4 +34,8 @@
     </div>
   {% endfor %}
   {{ knp_pagination_render(characters) }}
+
+  <div class="button-group">
+    <a href="{{ path("character_new", {"gameName": game.name}) }}" class="button">{{ "game.create_character"|trans }}</a>
+  </div>
 {% endblock %}
