Genres in game listing

--- a/src/Argon/GameBundle/Resources/views/Game/index.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Game/index.html.twig
@@ -17,6 +17,11 @@
         {% if game.info.description[app.request.locale] is defined %}
           <p>{{ game.info.description[app.request.locale] }}</p>
         {% endif %}
+        <p class="genres">
+          {% for genre in game.genres %}
+            <span class="label {{ genre|lower }}">{{ ("genres." ~ genre)|trans }}</span>
+          {% endfor %}
+        </p>
       </div>
     </div>
   {% endfor %}
