--- a/src/Argon/GameBundle/Resources/views/Game/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Game/view.html.twig
@@ -8,6 +8,11 @@
   {% if game.info.description[app.request.locale] is defined %}
     <p>{{ game.info.description[app.request.locale] }}</p>
   {% endif %}
+  <p class="genres">
+    {% for genre in game.genres %}
+      <span class="label {{ genre|lower }}">{{ ("genres." ~ genre)|trans }}</span>
+    {% endfor %}
+  </p>
 
   <h2>{{ "game.characters"|trans }}</h2>
   {% for row in characters|batch(3) %}
