--- a/src/Argon/WebBundle/Resources/views/layout.html.twig
+++ b/src/Argon/WebBundle/Resources/views/layout.html.twig
@@ -29,6 +29,7 @@
             <div class="top-bar-right">
               {% block nav %}
               <ul class="menu align-right">
+                <li><a href="{{ path("games") }}">{{ "layout.games"|trans }}</a></li>
                 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                   {% if is_granted('ROLE_USER') %}
                     <li><a href="{{ path("character") }}">{{ "layout.character"|trans }}</a></li>
