Show create character on player login only

--- a/src/Argon/GameBundle/Resources/views/Game/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Game/view.html.twig
@@ -40,7 +40,9 @@
   {% endfor %}
   {{ knp_pagination_render(characters) }}
 
+  {% if is_granted('ROLE_PLAYER') %}
   <div class="button-group">
     <a href="{{ path("character_new", {"gameName": game.name}) }}" class="button">{{ "game.create_character"|trans }}</a>
   </div>
+  {% endif %}
 {% endblock %}
