Dots in changelog

--- a/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
@@ -18,11 +18,11 @@
     <h5>1.24</h5>
     <ul>
       <li>A public list of <a href="{{ path("games") }}">games</a>,</li>
-      <li>Skills can be edited in admin,</li>
+      <li>Skills can be edited in admin.</li>
     </ul>
     <h5>1.23</h5>
     <ul>
-      <li>A character level is calculated by the game and shown next to the nick like this <span class="label">E7</span>,</li>
+      <li>A character level is calculated by the game and shown next to the nick like this <span class="label">E7</span>.</li>
     </ul>
     <h5>1.22</h5>
     <ul>
