--- a/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
@@ -15,6 +15,10 @@
 <div class="row">
   <div class="small-9 columns">
     <h3>{{ "admin.dashboard.whatsnew"|trans }}</h3>
+    <h5>1.25</h5>
+    <ul>
+      <li>Abilities in registration form now accepts to be clicked to move it first,</li>
+    </ul>
     <h5>1.24</h5>
     <ul>
       <li>A public list of <a href="{{ path("games") }}">games</a>,</li>
