--- a/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
@@ -18,6 +18,7 @@
     <h5>1.25</h5>
     <ul>
       <li>Abilities in registration form now accepts to be clicked to move it first,</li>
+      <li>Price limits in buy skills,</li>
     </ul>
     <h5>1.24</h5>
     <ul>
