Remove margin for skills input

--- a/app/assets/scss/argonbook.scss
+++ b/app/assets/scss/argonbook.scss
@@ -75,6 +75,9 @@ $section-space: rem-calc(40);
   .is-stuck {
     padding: ($section-space / 2) 0;
   }
+  #skills-table input {
+    margin-bottom: 0;
+  }
 }
 
 .game.media-object, .comment {
