--- a/src/Argon/BlogBundle/Resources/views/Admin/Post/view.html.twig
+++ b/src/Argon/BlogBundle/Resources/views/Admin/Post/view.html.twig
@@ -33,7 +33,7 @@
   </dd>
 
   <dt>{{ "admin.blog.body"|trans }}</dt>
-  <dd>{{ post_rendered|raw }}</dd>
+  <dd>{{ post.body|markdown|raw }}</dd>
 
   <dt>{{ "admin.blog.image"|trans }}</dt>
   <dd>
