--- a/src/Argon/GameBundle/Resources/views/Character/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/view.html.twig
@@ -61,8 +61,8 @@
   <div class="large-4 columns">
     <h2>{{ "character.story"|trans }}</h2>
     {{ include("ArgonGameBundle:Partial\\Character:story.html.twig", {"character": character}) }}
-    {% if story_note %}
-      <div class="note"><h5>{{ "character.note"|trans }}</h5>{{ story_note|raw }}</div>
+    {% if character.note %}
+      <div class="note"><h5>{{ "character.note"|trans }}</h5>{{ character.note|markdown|raw }}</div>
     {% endif %}
   </div>
   {% endif %}
