--- a/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
@@ -15,10 +15,14 @@
 <div class="row">
   <div class="small-9 columns">
     <h3>{{ "admin.dashboard.whatsnew"|trans }}</h3>
+    <h5>1.26</h5>
+    <ul>
+      <li>Skills now accepts a description as markdown.</li>
+    </ul>
     <h5>1.25</h5>
     <ul>
       <li>Abilities in registration form now accepts to be clicked to move it first,</li>
-      <li>Price limits in buy skills,</li>
+      <li>Price limits in buy skills.</li>
     </ul>
     <h5>1.24</h5>
     <ul>
