--- a/app/assets/scss/argonbook.scss
+++ b/app/assets/scss/argonbook.scss
@@ -61,6 +61,10 @@ $section-space: rem-calc(40);
   height: 100%;
 }
 
+.button-group .callout {
+  margin: 0;
+}
+
 .user {
   color: $black;
   background-color: $white;
