--- a/app/assets/scss/argonbook.scss
+++ b/app/assets/scss/argonbook.scss
@@ -65,7 +65,7 @@ $section-space: rem-calc(40);
   margin: 0;
 }
 
-.user {
+.plain {
   color: $black;
   background-color: $white;
   padding: $section-space;
