--- a/src/Argon/GameBundle/Resources/views/Game/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Game/view.html.twig
@@ -17,21 +17,11 @@
   <h2>{{ "game.characters"|trans }}</h2>
   {% for row in characters|batch(3) %}
     <div class="row small-up-2 medium-up-3">
+      <div class="column">
       {% for character in row %}
-        <div class="column">
-          <div class="card">
-            <div class="card-section">
-              {{ render(controller("ArgonGameBundle:Block:characterNick", {"character": character})) }}
-              (
-                <span class="fi-graph-bar"></span>
-                <span class="experience">{{ character.skillsExperience }}/{{ character.experience }}</span>
-              )
-              <br>
-              {{ character.race }}
-            </div>
-          </div>
-        </div>
+        {{ include("ArgonGameBundle:Partial\\Character:card.html.twig", {"character": character}) }}
       {% endfor %}
+      </div>
     </div>
   {% else %}
     <div class="warning callout">
