--- a/src/Argon/GameBundle/Resources/views/Partial/Character/card.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Partial/Character/card.html.twig
@@ -7,8 +7,8 @@
     )
     <br>
     {{ character.race }}
-    {% if show_switch is defined and show_switch %}
-      <a href="{{ path("character_view", {"slug": character.slug, "_switch": character.slug}) }}" class="button-switch button">{{ "character.switch"|trans }}</a>
+    {% if switch_to is defined %}
+      <a href="{{ switch_to|default(path("character_view", {"slug": character.slug}) ~ "&") ~ "_switch=" ~ character.slug }}" class="button-switch button">{{ "character.switch"|trans }}</a>
     {% endif %}
   </div>
 </div>
