Respond 404 when character not found

--- a/src/Argon/WebBundle/Resources/views/layout.html.twig
+++ b/src/Argon/WebBundle/Resources/views/layout.html.twig
@@ -31,7 +31,7 @@
               <ul class="menu align-right">
                 <li><a href="{{ path("games") }}">{{ "layout.games"|trans }}</a></li>
                 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                  {% if is_granted('ROLE_USER') %}
+                  {% if is_granted("ROLE_USER") %}
                     <li><a href="{{ path("character") }}">{{ "layout.character"|trans }}</a></li>
                     <li><a href="{{ path("fos_user_profile_show") }}">{{ "layout.profile"|trans }}</a></li>
                   {% endif %}
