--- a/src/Argon/GameBundle/Resources/views/Character/index.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/index.html.twig
@@ -5,7 +5,7 @@
 
 {% block content %}
   <h1>{{ "character.characters"|trans }}</h1>
-  {{ render(controller("ArgonGameBundle:Block:characters")) }}
+  {{ render(controller("ArgonGameBundle:Block:characters", {"linkSwitch": true, "showEdit": true})) }}
   <div class="button-group">
     <a href="{{ path("character_game") }}" class="button">{{ "character.new"|trans }}</a>
   </div>
