--- a/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
@@ -17,6 +17,7 @@
     <h3>{{ "admin.dashboard.whatsnew"|trans }}</h3>
     <h5>1.26</h5>
     <ul>
+      <li>Characters now have a <a href="{{ path("character_switch", {"next": path("friendlist")}) }}">friendlist</a> and can add other characters as friends,</li>
       <li>Skills now accepts a description as markdown.</li>
     </ul>
     <h5>1.25</h5>
