--- a/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
@@ -12,8 +12,8 @@
 {% endblock %}
 
 {% block content %}
-<div class="row">
-  <div class="small-9 columns">
+<div class="grid-x">
+  <div class="small-9 cell">
     <h3>{{ "admin.dashboard.whatsnew"|trans }}</h3>
     <h5>1.26</h5>
     <ul>
@@ -40,7 +40,7 @@
       <li>On new game, only races from the game's genres are shown.</li>
     </ul>
   </div>
-  <div class="small-3 columns">
+  <div class="small-3 cell">
     <h3>{{ "admin.dashboard.title"|trans }}</h3>
     <dl>
       <dt>{{ "admin.dashboard.version"|trans }}</dt>
