--- a/src/Argon/WebBundle/Resources/views/Admin/sink.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/sink.html.twig
@@ -31,14 +31,14 @@
       <option value="apollo">Apollo</option>
     </select>
   </label>
-  <div class="row">
-    <fieldset class="large-6 columns">
+  <div class="grid-x">
+    <fieldset class="large-6 cell">
       <legend>Choose Your Favorite</legend>
       <input type="radio" name="pokemon" value="Red" id="pokemonRed" required><label for="pokemonRed">Red</label>
       <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Blue</label>
       <input type="radio" name="pokemon" value="Yellow" id="pokemonYellow"><label for="pokemonYellow">Yellow</label>
     </fieldset>
-    <fieldset class="large-6 columns">
+    <fieldset class="large-6 cell">
       <legend>Check these out</legend>
       <input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
       <input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
