--- a/src/Argon/GameBundle/Resources/views/Character/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/view.html.twig
@@ -25,7 +25,7 @@
     {{ include("ArgonGameBundle:Partial\\Character:abilities.html.twig", {"character": character}) }}
   </div>
 </div>
-<div class="grid-x">
+<div class="grid-x grid-margin-x">
   <div class="large-8 cell">
     <h2>{{ "character.skills"|trans }}</h2>
     <table>
