--- a/src/Argon/GameBundle/Resources/views/Character/view.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/view.html.twig
@@ -112,6 +112,7 @@
 {% if is_granted("ROLE_PJ") and not character.isEqualTo(app.user) %}
   {% if character in friends %}
     <a href="{{ path("friendlist_relation", {"slug": character.slug}) }}" class="button">{{ "character.view_friendship"|trans }}</a>
+    <a href="{{ path("messenger_conversation", {"slug": character.slug}) }}" class="button">{{ "character.send_message"|trans }}</a>
   {% else %}
     <a href="{{ path("friendlist_relation", {"slug": character.slug}) }}" class="button">{{ "character.add_to_friendlist"|trans }}</a>
   {% endif %}
