--- a/etc/nginx/sites-enabled/argonbook.eu.conf.j2
+++ b/etc/nginx/sites-enabled/argonbook.eu.conf.j2
@@ -1,5 +1,5 @@
 upstream argonbook {
-    server unix:/var/run/php5-fpm.sock;
+    server unix:/var/run/php/php{{ php_version }}-fpm.sock;
 }
 
 server {
