Change warning color to fix warning

--- a/app/assets/scss/argonbook.scss
+++ b/app/assets/scss/argonbook.scss
@@ -4,7 +4,7 @@ $foundation-palette: (
   primary: #007095,
   secondary: #777,
   success: #003300,
-  warning: #cc8b00,
+  warning: #9c651e,
   alert: #b0413e,
   footer: #63767e,
 );
