Show blog post image errors

--- a/src/Argon/BlogBundle/Resources/views/Admin/Post/edit.html.twig
+++ b/src/Argon/BlogBundle/Resources/views/Admin/Post/edit.html.twig
@@ -27,7 +27,7 @@
           <img src="{{ asset(post.imagePath) }}" alt="{{ post.title }}">
         </a>
       {% endif %}
-      {{ form_widget(form.image) }}
+      {{ form_row(form.image) }}
     </div>
     <div class="medium-8 cell">
       {{ form_row(form.title) }}
